--- a/webtoeic/package.json
+++ b/webtoeic/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/charts": "^1.4.3",
     "@ant-design/icons": "^5.2.6",
     "@reduxjs/toolkit": "^1.9.6",
     "@testing-library/jest-dom": "^5.17.0",
@@ -12,10 +13,12 @@
     "@types/node": "^16.18.54",
     "@types/react": "^18.2.23",
     "@types/react-dom": "^18.2.8",
-    "antd": "^5.9.4",
+    "antd": "^5.12.2",
     "axios": "^1.5.1",
+    "dayjs": "^1.11.10",
     "firebase": "^10.5.2",
     "history": "^5.3.0",
+    "jspdf": "^2.5.1",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "node-sass": "^7.0.3",
